# mbti_api

./: main.py  pyproject.toml  test.py
routers/: fortune.py  psychology.py
services/: ai_fortune.py
